# scope-color-test

./: README.md  pyproject.toml
src/scope_color_test/: __init__.py  pipeline.py  schema.py
