[project]
name = "scope-color-test"
version = "0.1.0"
description = "Simple color overlay/blend test plugin for Daydream Scope"
requires-python = ">=3.12"

[project.entry-points."scope"]
scope_color_test = "scope_color_test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_color_test"]
